--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,10 @@ repos:
         args:
           - --hook-config=--retry-once-with-cleanup=true
           - --tf-init-args=-upgrade
+      - id: infracost_breakdown
+        args:
+          - --args=--path=.
+        verbose: true # Always show costs
 -   repo: https://github.com/bridgecrewio/checkov.git
     rev: '3.2.219'
     hooks:
