--- a/.github/workflows/upgrade-dependencies.yml
+++ b/.github/workflows/upgrade-dependencies.yml
@@ -51,6 +51,8 @@ jobs:
       - name: Run pre-commit
         id: precommit
         run: pre-commit run --all-files
+        env:
+          INFRACOST_API_KEY: ${{ secrets.INFRACOST_API_KEY }}
 
       - name: Create Pull Request
         if: ${{ failure() && steps.precommit.conclusion == 'failure' }}
