--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -38,6 +38,11 @@ repos:
         args:
           - --hook-config=--retry-once-with-cleanup=true
           - --tf-init-args=-upgrade
+      - id: terraform_providers_lock
+        args:
+          - --args=-platform=linux_arm64
+          - --args=-platform=linux_amd64
+          - --args=-platform=darwin_amd64
       - id: infracost_breakdown
         args:
           - --args=--path=.
